# my-python-package

./: pyproject.toml
.github/workflows/: python-publish.yml
src/my-python-package/: __init__.py
src/my_python_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
