[project]
name = "pypi-vegaone"
version = "0.1.0"
description = "A sample Python package published to GitHub Packages"
readme = "README.md"
authors = [{ name="Your Name" }]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
